--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.open-in-view=false
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 spring.messages.basename=messages
+
+#Actuators
+management.endpoints.web.exposure.include=*
