integracion con JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.messages.basename=messages
 
 #Actuators
 management.endpoints.web.exposure.include=*
+
+#Spring Security Basic Authentication
+spring.security.user.name=username
+spring.security.user.password=password
+
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
