--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,20 @@
+logging.level.org.springframework = info
+#This is not really needed as this is the default after 2.0.0.RELEASE
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.messages.basename=messages
+management.endpoints.web.exposure.include=*
+spring.security.user.name=username
+spring.security.user.password=password
+spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/udemy
 spring.datasource.username=udemy
 spring.datasource.password=udemy
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-logging.level.org.springframework=info
-spring.devtools.add-properties=false
-logging.level.web=DEBUG
-spring.jpa.open-in-view=false
-
-spring.jackson.serialization.write-dates-as-timestamps=false
-
-spring.messages.basename=messages
-
-#Actuators
-management.endpoints.web.exposure.include=*
-
-#Spring Security Basic Authentication
-spring.security.user.name=username
-spring.security.user.password=password
-
-spring.jpa.show-sql=true
-spring.datasource.initialization-mode=always
